# solr-ir-tutorial

./: README.md  pyproject.toml
0-smoketest/: README.md  create-core.sh  smoketest.py
1-indexdocs/: README.md  index-docs.py
2-query-framework/solrir/retrievers/: client.py
2-query-framework/solrir/utils/: qtypes.py
docker/: docker-compose.yaml  setup.sh
docker/configsets/conf/: managed-schema.xml  solrconfig.xml
