[project]
name = "solr"
version = "0.1.0"
description = "Solr Tuorial setup"
authors = [
    {name = "Jaganadh Gopinadhan",email = "jaganadhg@outlook.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.9,<=3.12.9"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
